# terminal-llm

./: .gitignore  README.md  env.sh  groq_query.py  llm_query.py  model.json  pyproject.toml
node/: index.js  package.json  test.py
prompts/: advice  cmd  comment  edit  guide  interface.txt  jieshi  quicksort  source-query.txt
server/: server.py
server/plugin/: background.js  extract.js  manifest.json  options.html  options.js
