[project]
name = "groq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.0",
    "levenshtein>=0.26.1",
    "markitdown>=0.0.1a3",
    "openai>=1.61.0",
    "pysocks>=1.7.1",
    "requests>=2.32.3",
    "socksio>=1.0.0",
    "tornado>=6.4.2",
    "tree-sitter-c>=0.23.4",
    "tree-sitter-cpp>=0.23.4",
    "tree-sitter-javascript>=0.23.1",
    "tree-sitter-python>=0.23.6",
    "tree-sitter>=0.24.0",
    "watchdog>=6.0.0",
]
